users updated to support following and retrieving users
